# PersonalEngine

./: .gitignore  CMakeLists.txt  build.sh  vcpkg.json
FirstGame/: main.cpp
src/Core/: Engine.cpp  Engine.h
src/Platform/: Window.cpp  Window.h
